Synchronization fixes (I think..)